Money Manager 25.3.1
* Remove javafx-maven-plugin, use exec-maven-plugin instead
* Use AppCDS in Linux install script
* Java 24
* JavaFX 24
* Backend: code cleanup and Spring Boot version bump